--- a/skeleton.html
+++ b/skeleton.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="row h-100">
                     <div class="col-12 text-center my-auto">
-                        <h1>Hola</h1>
+                        <h1>Lorem ipsum dolor sit amet</h1>
                         <h2>Aenean imperdiet orci feugiat ex sollicitudin fermentum</h2>
                     </div>
                 </div>
