--- a/skeleton.html
+++ b/skeleton.html
@@ -11,8 +11,8 @@
             <div class="container">
                 <div class="row h-100">
                     <div class="col-12 text-center my-auto">
-                        <h1>Hola</h1>
-                        <h2>Aenean imperdiet orci feugiat ex sollicitudin fermentum</h2>
+                        <h1>Impacto ambiental de los perros en las zonas silvestres</h1>
+                        <h2>Victoria García - Javier Infante - Martina González - Paula Scheleff - Pía Sekul - Natalia Wang</h2>
                     </div>
                 </div>
             </div>
