--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="film"></i> Este subtítulo tiene que comentar un embed</h3>
+                            <h3><i data-feather="film"></i> Mascotas prohibidas en áreas silvestres protegidas</h3>
                             <p>
                                 El <a href="https://getbootstrap.com/docs/4.5/utilities/embed/"><strong>embed</strong> lo encuentran en las <strong>utilidades</strong></a> del sitio web oficial de Boostrap. Allí se explica su uso, y se presentan otras opciones de "razón" disponibles. Se recomienda mantener la razón 16:9 que es utilizada en este ejemplo y los que siguen.
                             </p>
