--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe
                                     class="embed-responsive-item"
-                                    src="https://youtu.be/p2n9Umubv30"
+                                    src="<iframe width="560" height="315" src="https://www.youtube.com/embed/p2n9Umubv30" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
                                     frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen
