--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row h-100">
                     <div class="col-12 text-center my-auto">
-                        <h1>¿Por qué no llevar tu perro al cerro?</h1>
+                        <h1>¿Por qué no llevar tu mascota al cerro?</h1>
                         <h2>Impacto ambiental de los perros en las zonas silvestres</h2>
                     </div>
                 </div>
