--- a/skeleton.html
+++ b/skeleton.html
@@ -11,8 +11,8 @@
             <div class="container">
                 <div class="row h-100">
                     <div class="col-12 text-center my-auto">
-                        <h1>Impacto ambiental de los perros en las zonas silvestres</h1>
-                        <h2></h2>
+                        <h1>¿Por qué no llevar tu mascota al cerro?</h1>
+                        <h2>Impacto ambiental de los perros en las zonas silvestres</h2>
                     </div>
                 </div>
             </div>
