--- a/skeleton.html
+++ b/skeleton.html
@@ -103,7 +103,7 @@
                         <div class="col-10 mx-auto mb-5 text-center">
                             <p><i data-feather="circle"></i></p>
                             <p class="lead">
-                                Este es un texto de cierre. Una síntesis o llamado de atención. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin commodo orci eu massa tempus vulputate semper vel dui. Curabitur turpis quam, aliquet at massa nec, aliquam vulputate nunc. Quisque urna justo, consectetur in odio nec, dignissim facilisis nisi. Pellentesque varius efficitur.
+ ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. ¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!
                             </p>
                         </div>
                     </div>
