--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row h-100">
                     <div class="col-12 text-center my-auto">
-                        <h1>¿Por qué no llevar tu mascota al cerro?</h1>
+                        <h1>¿Por qué no llevar tu perro al cerro?</h1>
                         <h2>Impacto ambiental de los perros en las zonas silvestres</h2>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe
                                     class="embed-responsive-item"
-                                    src="https://www.youtube.com/embed/p2n9Umubv30"
+                                    src="https://youtu.be/p2n9Umubv30"
                                     frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen
@@ -62,10 +62,10 @@
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
                             <h3><i data-feather="film"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
-                                El <a href="https://getbootstrap.com/docs/4.5/utilities/embed/"><strong>embed</strong> lo encuentran en las <strong>utilidades</strong></a> del sitio web oficial de Boostrap. Allí se explica su uso, y se presentan otras opciones de "razón" disponibles. Se recomienda mantener la razón 16:9 que es utilizada en este ejemplo y los que siguen.
+                                El <a href="https://getbootstrap.com/docs/4.5/utilities/embed/"><strong>embed</strong> La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros).<strong>utilidades</strong></a> del sitio web oficial de Boostrap. Allí se explica su uso, y se presentan otras opciones de "razón" disponibles. Se recomienda mantener la razón 16:9 que es utilizada en este ejemplo y los que siguen.
                             </p>
-                            <p class="small d-none d-lg-block">
-                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
+                            //<p class="small d-none d-lg-block">
+                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.//
                             </p>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                             </svg>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="pen-tool"></i> Este subtítulo tiene que comentar un svg</h3>
+                            <h3><i data-feather="pen-tool"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país. </h3>
                             <p>
                                 SVG (Scalable Vector Graphics) es un dialecto de descripción de gráficos vectoriales bidimensionales, tanto estáticos como animados. Es más que una opción para guardar en Illustrator. <a href="https://developer.mozilla.org/es/docs/Web/SVG">SVG es un estándar Web abierto basado en texto</a>.
                             </p>
