--- a/skeleton.html
+++ b/skeleton.html
@@ -47,7 +47,7 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar un embed</h3>
+                            <h3><i data-feather="circle"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros).
                             </p>
