--- a/skeleton.html
+++ b/skeleton.html
@@ -189,12 +189,12 @@
         <script>
             // Tienen que editar los elementos dentro de la siguiente variable
             var integrantes = [
-                { nombre: "Nombre Apellido", descriptor: "Integrante 1. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Nombre Apellido", descriptor: "Integrante 2. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Nombre Apellido", descriptor: "Integrante 3. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Nombre Apellido", descriptor: "Integrante 4. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Nombre Apellido", descriptor: "Integrante 5. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Nombre Apellido", descriptor: "Integrante 6. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Victoria García", descriptor: "Integrante 1. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Martina González", descriptor: "Integrante 2. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Javiera Infante", descriptor: "Integrante 3. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Paula Scheleff", descriptor: "Integrante 4. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Pía Sekul", descriptor: "Integrante 5. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Natalia Wang", descriptor: "Integrante 6. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
             ];
             // No es necesario que editen lo que sigue
             for (let x = 0; x < integrantes.length; x++) {
