--- a/skeleton.html
+++ b/skeleton.html
@@ -28,7 +28,7 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="circle"></i> Este subtítulo tiene que comentar una imagen</h3>
+                            <h3><i data-feather="circle"></i> Áreas protegidas</h3>
                             <p>
                                 La imagen debe tener una extensión JPG, PNG o GIF. Como pueden ver en el código, en estricto rigor, no se trata de una única imagen, sino tres. Es una, de tres, la que se muestra según el tamaño de pantalla del dispositivo: pequeña, mediana o grande.
                             </p>
