--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="camera"></i> Áreas protegidas</h3>
+                            <h3><i data-feather="camera"></i> Este subtítulo tiene que comentar una imagen</h3>
                             <p>
                                 La imagen debe tener una extensión JPG, PNG o GIF. Como pueden ver en el código, en estricto rigor, no se trata de una única imagen, sino tres. Es una, de tres, la que se muestra según el tamaño de pantalla del dispositivo: pequeña, mediana o grande.
                             </p>
@@ -49,11 +49,10 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last">
-                            <!-- 16:9 aspect ratio -->
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe
                                     class="embed-responsive-item"
-                                    src="https://www.youtube.com/embed/p2n9Umubv30"
+                                    src="https://youtu.be/p2n9Umubv30"
                                     frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen
@@ -63,11 +62,10 @@
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
                             <h3><i data-feather="film"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
-                                El <a href="https://getbootstrap.com/docs/4.5/utilities/embed/"><strong>embed</strong> La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros).<strong>utilidades</strong></a> del sitio web oficial de Boostrap. Allí se explica su uso, y se presentan otras opciones de "razón" disponibles. Se recomienda mantener la razón 16:9 que es utilizada en este ejemplo y los que siguen.
+                               La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros). 
                             </p>
                             //<p class="small d-none d-lg-block">
                                
-                           
                             </p>//
                         </div>
                     </div>
@@ -85,10 +83,8 @@
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país. </h3>
                             <p>
-                                SVG (Scalable Vector Graphics) es un dialecto de descripción de gráficos vectoriales bidimensionales, tanto estáticos como animados. Es más que una opción para guardar en Illustrator. <a href="https://developer.mozilla.org/es/docs/Web/SVG">SVG es un estándar Web abierto basado en texto</a>.
-                            </p>
+                                Existe tanto un peligro en los instintos que tiene el animal como el orinar o defecar en distintas plantas y los ataques a otros animales y sus hábitats seguros, como un riesgo de transmisión de enfermedades letales. Es de suma importancia concientizar sobre problemáticas cotidianas para comenzar a generar una conversación a nivel individual y comunitario. Este es un tema poco conocido por la mayoría de los dueños de perros y que sigue siendo un hecho que ocurre diariamente.                             </p>
                             <p class="small d-none d-lg-block">
-                                Si revisan el código fuente, podrán notar que el gráfico mantiene una proporción definida con <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/viewBox">viewBox</a>, y con ella se adapta a cualquier condición de pantalla.
                             </p>
                         </div>
                     </div>
@@ -118,7 +114,7 @@
                         <div class="col-10 mx-auto mb-5 text-center">
                             <p><i data-feather="activity"></i></p>
                             <p class="lead">
-                                Este es un texto de cierre. Una síntesis o llamado de atención. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin commodo orci eu massa tempus vulputate semper vel dui. Curabitur turpis quam, aliquet at massa nec, aliquam vulputate nunc. Quisque urna justo, consectetur in odio nec, dignissim facilisis nisi. Pellentesque varius efficitur.
+                                ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. ¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!
                             </p>
                         </div>
                     </div>
