--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
                             <p>
                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros). 
                             </p>
-                            //<p class="small d-none d-lg-block">
-                               
-                            </p>//
+                            <p class="small d-none d-lg-block">
+                            </p>
                         </div>
                     </div>
                 </div>
