--- a/index.html
+++ b/index.html
@@ -28,17 +28,14 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/wireframe-aspect_ratio-1-1.png" alt="describa la imagen" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/wireframe-aspect_ratio-4-3.png" alt="describa la imagen" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="camera"></i> Este subtítulo tiene que comentar una imagen</h3>
+                            <h3><i data-feather="camera"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
-                                La imagen debe tener una extensión JPG, PNG o GIF. Como pueden ver en el código, en estricto rigor, no se trata de una única imagen, sino tres. Es una, de tres, la que se muestra según el tamaño de pantalla del dispositivo: pequeña, mediana o grande.
+                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos y otros).
                             </p>
                             <p class="small d-none d-lg-block">
-                                En la pantalla pequeña la imagen es cuadrada. En la pantalla mediana es rectangular y apaisada, con lados en <a href="https://es.wikipedia.org/wiki/Relaci%C3%B3n_de_aspecto">relación de aspecto</a> 4:3. En la pantalla grande la relación es 16:9
                             </p>
                         </div>
                     </div>
