--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                             <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="camera"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="camera"></i> Áreas protegidas</h3>
                             <p>
-                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos y otros).
+                                “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020)
                             </p>
                             <p class="small d-none d-lg-block">
                             </p>
