--- a/skeleton.html
+++ b/skeleton.html
@@ -30,10 +30,9 @@
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Áreas protegidas</h3>
                             <p>
-                                La imagen debe tener una extensión JPG, PNG o GIF. Como pueden ver en el código, en estricto rigor, no se trata de una única imagen, sino tres. Es una, de tres, la que se muestra según el tamaño de pantalla del dispositivo: pequeña, mediana o grande.
+                               “Son territorios protegidos legalmente que tienen la finalidad de asegurar la diversidad biológica, amparar la preservación de la naturaleza o conservar el patrimonio ambiental” (MMA, 2020)
                             </p>
                             <p class="small d-none d-lg-block">
-                                En la pantalla pequeña la imagen es cuadrada. En la pantalla mediana es rectangular y apaisada, con lados en <a href="https://es.wikipedia.org/wiki/Relaci%C3%B3n_de_aspecto">relación de aspecto</a> 4:3. En la pantalla grande la relación es 16:9
                             </p>
                         </div>
                     </div>
