--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="col-10 mx-auto mb-5 text-center">
                             <p><i data-feather="activity"></i></p>
                             <p class="lead">
-                                ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. ¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!
+                                ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. 
                             </p>
                         </div>
                     </div>
@@ -128,7 +128,8 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                               <a href="https://www.conaf.cl/">CONAF</a>
+                                <p class="card-text">Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país</p>
                             </div>
                         </div>
                     </div>
@@ -136,7 +137,8 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="https://drive.google.com/file/d/1IsB2cFMY9Fqihc4kyAYL32lNMiWLMios/view?usp=sharing">Fanzine Informativo</a>
+                                <p class="card-text">¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!</p>
                             </div>
                         </div>
                     </div>
@@ -144,7 +146,8 @@
                         <div class="card shadow-sm">
                             <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Articulo 2019</a>
+                                <p class="card-text">“CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
                             </div>
                         </div>
                     </div>
@@ -219,12 +222,12 @@
         <script>
             // Tienen que editar los elementos dentro de la siguiente variable
             var integrantes = [
-                { nombre: "Victoria García", descriptor: "Pichon, 21 años, Acuario", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Victoria García", descriptor: "Integrante 1. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Martina González", descriptor: "Integrante 2. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Javiera Infante", descriptor: "Integrante 3. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Paula Scheleff", descriptor: "Integrante 4. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Pía Sekul", descriptor: "Integrante 5. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Natalia Wang", descriptor: "Integrante 6. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
             ];
             // No es necesario que editen lo que sigue
             for (let x = 0; x < integrantes.length; x++) {
