--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap" rel="stylesheet" />
         <!--este es el estilo CSS que usamos en index.html y surface.html-->
         <link rel="stylesheet" href="style.css" />
-        <title>Lorem ipsum dolor sit amet</title>
+        <title>Áreas Silvestres</title>
     </head>
     <body>
         <header>
