--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
         <script>
             // Tienen que editar los elementos dentro de la siguiente variable
             var integrantes = [
-                { nombre: "Victoria García", descriptor: "Integrante 1. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Martina González", descriptor: "Integrante 2. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Javiera Infante", descriptor: "Integrante 3. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Paula Scheleff", descriptor: "Integrante 4. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Pía Sekul", descriptor: "Integrante 5. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
-                { nombre: "Natalia Wang", descriptor: "Integrante 6. Loren ipsum dolor sit amet", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Victoria García", descriptor: "Pichon, 21 años, Acuario", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Taurot", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/wireframe-aspect_ratio-3-4.png" },
+                { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/wireframe-aspect_ratio-3-4.png" },
             ];
             // No es necesario que editen lo que sigue
             for (let x = 0; x < integrantes.length; x++) {
