--- a/skeleton.html
+++ b/skeleton.html
@@ -42,6 +42,8 @@
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last">
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
                             <h3><i data-feather="circle"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
