--- a/surface.html
+++ b/surface.html
@@ -65,7 +65,7 @@
                                 <!-- icono 1 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="info" class="mx-auto mt-4 mb-2"></i>
+                                        <i data-feather="rss" class="mx-auto mt-4 mb-2"></i>
                                         <p class="small">info</p>
                                     </div>
                                 </div>
