--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
+                            <a href="http://www.lostejos.com"><img src="casarural.jpg" alt="Los Tejos" /></a>
                             <div class="card-body">
                                 <p class="card-text">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
                             </div>
