--- a/surface.html
+++ b/surface.html
@@ -65,64 +65,64 @@
                                 <!-- icono 1 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="rss" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">info</p>
+                                        <i data-feather="alert-triangle" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">alert-triangle</p>
                                     </div>
                                 </div>
                                 <!-- icono 2 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="x-circle" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">x-circle</p>
+                                        <i data-feather="book-open" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">book-open</p>
                                     </div>
                                 </div>
                                 <!-- icono 3 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="book" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">book</p>
+                                        <i data-feather="rss" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">rss</p>
                                     </div>
                                 </div>
                                 <!-- icono 4 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="clipboard" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">clipboard</p>
+                                        <i data-feather="smile" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">smile</p>
                                     </div>
                                 </div>
                                 <!-- icono 5 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="cloud-rain" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">cloud-rain</p>
+                                        <i data-feather="users" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">users</p>
                                     </div>
                                 </div>
                                 <!-- icono 6 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="feather" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">feather</p>
+                                        <i data-feather="youtube" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">youtube</p>
                                     </div>
                                 </div>
                                 <!-- icono 7 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="eye" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">eye</p>
+                                        <i data-feather="thumbs-up" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">thumbs-up</p>
                                     </div>
                                 </div>
                                 <!-- icono 8 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="coffee" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">coffee</p>
+                                        <i data-feather="moon" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">moon</p>
                                     </div>
                                 </div>
                                 <!-- icono 9 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="cpu" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">cpu</p>
+                                        <i data-feather="heart" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">heart</p>
                                     </div>
                                 </div>
                                 <!-- icono 10 -->
@@ -142,8 +142,8 @@
                                 <!-- icono 12 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                                     <div class="card text-center text-dark bg-light shadow-sm mb-4">
-                                        <i data-feather="image" class="mx-auto mt-4 mb-2"></i>
-                                        <p class="small">image</p>
+                                        <i data-feather="help-circle" class="mx-auto mt-4 mb-2"></i>
+                                        <p class="small">help-circle</p>
                                     </div>
                                 </div>
                             </div>
