--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <a href="http://www.lostejos.com"><img src="casarural.jpg" alt="Los Tejos" /></a>
+                            <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/"><img src="th_4fdefb5842aa2dc68092ca1241ed9f5d_operativo-lacampana-200.jpg" alt="CONAF" /></a>
                             <div class="card-body">
-                                <p class="card-text">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
+                                <p class="card-text">Artíuclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
                             </div>
                         </div>
                     </div>
