--- a/skeleton.html
+++ b/skeleton.html
@@ -132,9 +132,9 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
+                            <img src="img/conguillio-3-1596x1064.png" class="card-img-top" alt="zorro culpeo" />
                             <div class="card-body">
-                                <p class="card-text">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
+                                <p class="card-text">Articulo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
                             </div>
                         </div>
                     </div>
