--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-4">
+                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <a href="http://www.secretariaplus.com"> <img src="ejecutivaanimada.gif"> </a>
+                            <img src="img/conguillio-3-1596x1064.png" class="card-img-top" alt="zorro culpeo" />
                             <div class="card-body">
-                                <p class="card-text">Artíuclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
+                                <p class="card-text">Articulo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
                             </div>
                         </div>
                     </div>
