--- a/skeleton.html
+++ b/skeleton.html
@@ -61,7 +61,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="describa la imagen" />
+                            <svg loading="lazy" class="img-fluid bg-light" xmlns="img/Gráfico (módulo digital)_Mesa de trabajo 1.svg" alt="Gráfico de porcentaje de áreas silvestres amenazadas por perros" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="circle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país.</h3>
@@ -132,9 +132,9 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/conguillio-3-1596x1064.png" class="card-img-top" alt="zorro culpeo" />
+                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Articulo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
+                                <p class="card-text">Arituclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
                             </div>
                         </div>
                     </div>
