--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="youtube"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="film"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros). 
                             </p>
@@ -142,11 +142,11 @@
                             </div>
                         </div>
                     </div>
-                     <div class="col-md-4 mb-4">
+                    <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/conguillio-3-1596x1064.png" class="card-img-top" alt="zorro culpeo" />
+                            <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/"> <img src="th_4fdefb5842aa2dc68092ca1241ed9f5d_operativo-lacampana-200%20(1).jpg" class="card-img-top" alt="describa la imagen" /> </a>
                             <div class="card-body">
-                                <p class="card-text">Articulo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</p>
+                                <p class="card-text">Artíuclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
                             </div>
                         </div>
                     </div>
