--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="book-open"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
+                            <h3><i data-feather="film"></i> Normativa Perros y otras mascotas al interior de Áreas Silvestres Protegidas</h3>
                             <p>
                                La Normativa para el manejo de perros y otras mascotas en las Áreas Silvestres Protegidas, administradas por CONAF, es un documento que busca regular la forma en que el personal de la institución, así como los visitantes, poblaciones humanas aledañas y demás personas e instituciones relacionadas con el tema, deben conducirse al interior  de cualquier parque nacional, reserva nacional o monumento natural y otras áreas protegidas, en relación a la presencia y tenencia de animales domésticos (perros, gatos  y otros). 
                             </p>
@@ -79,7 +79,7 @@
                             </svg>
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="alert-triangle"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país. </h3>
+                            <h3><i data-feather="pen-tool"></i> Animales domésticos pueden llegar a afectar gravemente a especies de áreas protegidas de nuestro país. </h3>
                             <p>
                                 Existe tanto un peligro en los instintos que tiene el animal como el orinar o defecar en distintas plantas y los ataques a otros animales y sus hábitats seguros, como un riesgo de transmisión de enfermedades letales. Es de suma importancia concientizar sobre problemáticas cotidianas para comenzar a generar una conversación a nivel individual y comunitario. Este es un tema poco conocido por la mayoría de los dueños de perros y que sigue siendo un hecho que ocurre diariamente.                             </p>
                             <p class="small d-none d-lg-block">
@@ -110,7 +110,7 @@
                 <div class="container">
                     <div class="row py-4">
                         <div class="col-10 mx-auto mb-5 text-center">
-                            <p><i data-feather="smile"></i></p>
+                            <p><i data-feather="activity"></i></p>
                             <p class="lead">
                                 ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. 
                             </p>
@@ -144,9 +144,9 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/"> <img src="th_4fdefb5842aa2dc68092ca1241ed9f5d_operativo-lacampana-200%20(1).jpg" class="card-img-top" alt="describa la imagen" /> </a>
+                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
                             <div class="card-body">
-                                <p class="card-text">Artíuclo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”. </p>
+                            <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo” (2019)</a> &bull;
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Sobre nosotras…</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <i data-feather="users"></i>
+                            <i data-feather="x-circle"></i>
                         </button>
                     </div>
                     <div class="modal-body row" id="team"><!--esto queda vacío, por ahora--></div>
